--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,29 @@
-body {
-    /* padding: 50px; */
-    /* background-color: crimson; */
-    padding-top: 50px;
-    padding-bottom: 50px;
-}
 
 .container {
-    max-width: 600px;  
-    margin: 0 auto;
-    padding: 50px; 
-    background-color: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; 
-    box-shadow: 0px 7px 29px rgba(0, 0, 0, 0.3);
+    max-width: 400px;
+    margin-top: 50px;
+    padding: 20px;
+    background: rgba(255, 255, 255, 0.9);
     border-radius: 8px;
-    /* font-weight: bold; */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-
 .form-group {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
-
-.card{
-    cursor: pointer;
+.form-control {
+    width: 100%;
+}
+.btn {
+    width: 100%;
+    margin-top: 10px;
+}
+.logo {
+    text-align: center;
+    margin-bottom: 20px;
+}
+.logo img {
+    max-width: 150px;
+}
+.navbar-info {
+    background-color: #17a2b8;
 }
